Fix mod ballots on mobile

--- a/src/client/site/browse_page/mod_ballot/mod_ballot.scss
+++ b/src/client/site/browse_page/mod_ballot/mod_ballot.scss
@@ -88,3 +88,13 @@ $ballot-move-duration: 0.2s;
         }
     }
 }
+
+@include screen-size(mobile) {
+    .view__mod_ballot {
+        .status {
+            &.loaded {
+                padding: 0;
+            }
+        }
+    }
+}
